<resources>
    <string name="app_name">NewsApp</string>
    <!-- Preference Titles -->
    <string name="messages_header">Profile</string>
    <string name="news_sources">News sources</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your profile</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="lenta_title">Lenta.ru</string>
    <string name="rbc_title">rbc.ru</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="profile_login">Your login:</string>
    <string name="profile_exit">Log out</string>
    <string name="to_register"><u>Don\'t have an account? Sign up</u></string>
    <string name="to_login"><u>Do you have an account? Sign in</u></string>
    <string name="back_button">back button</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="loading_text">Loading…</string>
    <string name="news_navigation">News</string>
    <string name="bookmarks_navigation">Bookmarks</string>
    <string name="settings_navigation">Settings</string>
    <string name="settings_profile_summary">Not logged in</string>
    <string name="settings_map">Map</string>
    <string name="language_btn">Language</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="tech_news">3dnews.ru</string>
    <string name="nplus_news">nplus1.ru</string>
    <string name="all">All</string>
    <string name="wrongCredentials">Your credentials is wrong</string>
    <string name="loginExists">This login already exists</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>