<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/news_sources">

        <SwitchPreferenceCompat
            app:key="@string/lenta_title"
            android:defaultValue="true"
            app:title="@string/lenta_title" />

        <SwitchPreferenceCompat
            app:key="@string/rbc_title"
            android:defaultValue="true"
            app:title="@string/rbc_title" />

        <SwitchPreferenceCompat
            app:key="@string/tech_news"
            android:defaultValue="true"
            app:title="@string/tech_news" />

        <SwitchPreferenceCompat
            app:key="@string/nplus_news"
            android:defaultValue="true"
            app:title="@string/nplus_news" />

        <SwitchPreferenceCompat
            app:key="@string/arzamas"
            android:defaultValue="true"
            app:title="@string/arzamas" />


    </PreferenceCategory>

</PreferenceScreen>