<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="profileViewModel"
            type="ru.example.andoid_app_news.ui.viewmodel.ProfileViewModel" />
        <variable name="context" type="ru.example.andoid_app_news.ui.activity.ProfileActivity"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.ProfileActivity">

        <ImageView
            android:id="@+id/arrowBackProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="arrowBackClicked"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />


        <TextView
            android:id="@+id/formTtile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@{profileViewModel.isProfile ? @string/profile_login : ( profileViewModel.isLogin ? @string/login : @string/register)}"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:visibility="@{profileViewModel.isProfile() ? View.VISIBLE : View.GONE}"
            android:text="@{profileViewModel.login}"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/formTtile" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/login_hint"
            android:visibility="@{profileViewModel.isProfile ?View.GONE : (  (profileViewModel.isLogin() || profileViewModel.isRegister) ? View.VISIBLE : View.GONE)}"
            app:layout_constraintTop_toBottomOf="@+id/formTtile">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/password_hint"
            android:visibility="@{profileViewModel.isProfile ? View.GONE : ((profileViewModel.isLogin() || profileViewModel.isRegister) ? View.VISIBLE : View.GONE)}"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@+id/loginField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/changeToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:visibility="@{ profileViewModel.isProfile ? View.GONE : ((profileViewModel.isRegister || profileViewModel.isLogin) ? View.VISIBLE : View.GONE)}"
            android:text="@{profileViewModel.isLogin ? @string/to_register : @string/to_login}"
            android:textColor="@color/news_subtitle_color"
            android:textSize="20sp"
            android:onClick="changeLoginRegister"
            app:layout_constraintTop_toBottomOf="@id/passField"
            />

        <Button
            android:id="@+id/containedButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@{profileViewModel.isProfile ? @string/profile_exit : ( profileViewModel.isLogin ? @string/login : @string/register)}"
            android:onClick="toProfile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>